fix(layout): remove grid overflow causing top blank; use fixed margin between sidebar and content; reset page suffix to 0

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -21,7 +21,7 @@
   @include breakpoint($large) {
     @include span(9 of 12);
     @include prefix(0 of 12);
-    @include suffix(0.5 of 12);
+    @include suffix(0 of 12);
   }
 
   .page__inner-wrap {
